# nokia-splab

./: .gitignore  README.md  pyproject.toml
clab/: lab.clab.drawio  lab.clab.yml  lab.clab.yml.annotations.json  splab.clab.drawio
clab/clab-sros-splab/: ansible-inventory.yml  authorized_keys  nornir-simple-inventory.yml  topology-data.json
clab/clab-sros-splab/.tls/ca/: ca.key  ca.pem
clab/clab-sros-splab/as1/: boot_config.txt
clab/clab-sros-splab/as2/: boot_config.txt
clab/clab-sros-splab/as3/: boot_config.txt
clab/clab-sros-splab/as4/: boot_config.txt
clab/clab-sros-splab/p1/A/config/cf3/: bof.cfg  config.cfg  config.cfg.1  config.cfg.2  config.cfg.3  config.cfg.4  config.cfg.5  nvsys.info
clab/clab-sros-splab/p2/A/config/cf3/: bof.cfg  config.cfg  config.cfg.1  config.cfg.3  config.cfg.4
clab/clab-sros-splab/p3/A/config/cf3/: bof.cfg  config.cfg  config.cfg.1  config.cfg.2  config.cfg.3  config.cfg.4
clab/clab-sros-splab/p4/A/config/cf3/: bof.cfg  config.cfg  config.cfg.1  config.cfg.2  config.cfg.3  config.cfg.4
clab/clab-sros-splab/pe1/A/config/cf3/: bof.cfg  config.cfg  config.cfg.1  config.cfg.3  config.cfg.4
clab/clab-sros-splab/pe2/A/config/cf3/: bof.cfg  (+7 more)
clab/configs/: as1.eos  as2.eos  as3.eos  as4.eos  sros.partial.cfg
src/: .env  config.yaml
src/inventory/: defaults.yaml
src/modules/: init_nornir.py  load_netbox.py
src/nornir_tasks/: deploy_config.py
src/rendered_config/: P1.json  P2.json  P3.json  P4.json  PE1.json  PE2.json  PE3.json  PE4.json
src/templates/: card.j2  interfaces.j2  ports.j2  sros.j2  system.j2
(+33 files in other folders)
